<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ext"
            android:layout_marginBottom="10dp"
            android:id="@+id/storage"/>

    <TextView
        android:id="@+id/folderpath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text=""
        android:textSize="15sp" />



    <ListView
        android:id="@+id/directorySelectionList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:choiceMode="multipleChoice" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="90">


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancel"
            android:background="#DCDCDC"
            style="@style/Base.Widget.AppCompat.ButtonBar"
            android:layout_weight="30" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_all"
            android:id="@+id/all"
            android:background="#DCDCDC"
            style="@style/Base.Widget.AppCompat.ButtonBar"
            android:layout_weight="30" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:id="@+id/ok"
            android:background="#DCDCDC"
            style="@style/Base.Widget.AppCompat.ButtonBar"
            android:layout_weight="30" />

</LinearLayout>
</LinearLayout>