<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".OtherClasses.BugReport">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorPrimary"
        app:title="Feedback and Bug Report"
        android:id="@+id/bug_report_toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/bug_report_toolbar"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:id="@+id/bug_report_tv"
                android:text="@string/bug_report"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/black"
                android:layout_margin="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="10dp"
                android:inputType="text"
                android:hint="@string/title"
                android:maxLength="50"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/bug_report_title_et"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="10dp"
                android:maxLength="3000"
                android:hint="@string/feedback"
                android:imeOptions="actionDone"
                android:layout_margin="10dp"
                android:id="@+id/bug_report_et"/>

            <com.myapp.unknown.iNTCON.OtherClasses.ThreeHFourthWImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:id="@+id/bug_report_attach_iv"
                android:layout_gravity="center"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/attachment"
                    android:id="@+id/bug_report_attach"
                    android:textColor="@color/colorPrimary"/>

            </android.support.v7.widget.CardView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:text="@string/send"
                android:id="@+id/bug_report_btn"
                android:textColor="@android:color/white"
                android:background="@drawable/border_three"/>


        </LinearLayout>


    </ScrollView>


</RelativeLayout>
