<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.myapp.unknown.iNTCON.SignIn.ForgotPassword">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar_forgot_pass"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/AppTheme"
        app:title="Forgot Password"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/toolbar_forgot_pass">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/reset_ur_pass"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginLeft="35dp"
            android:gravity="center"
            android:textColor="#9c9c9c"
            android:text="@string/assoc_email"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:drawableStart="@drawable/ic_email_black_18dp"
            android:drawableLeft="@drawable/ic_email_black_18dp"
            android:drawablePadding="10dp"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingRight="15dp"
            android:paddingEnd="15dp"
            android:hint="@string/email"
            android:singleLine="true"
            android:id="@+id/reset_email"
            android:inputType="textEmailAddress"
            android:theme="@style/MyEditTextTheme2"
            android:textColorHint="#7FAAAAAA"
            android:layout_marginTop="5dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:visibility="gone"
            android:text="@string/btn_back"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_three"
        android:layout_margin="20dp"
        android:text="@string/reset_pass"
        android:id="@+id/reset_btn"
        android:focusable="true"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/white"/>


</RelativeLayout>
