<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@android:color/white"
    tools:context=".InstRequest.CoursesOffered">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:title="Courses Offered"
        android:id="@+id/course_toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/tap_on_list"/>

    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/course_rv"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:weightSum="1">

        <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:hint="@string/course_name"
            android:layout_weight="1"
            android:inputType="text"
            android:maxLength="200"
            android:id="@+id/course_name"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/add"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/white"
            android:background="@drawable/border_three"
            android:id="@+id/course_button"/>

    </LinearLayout>

</LinearLayout>